--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -109,7 +109,7 @@ input {
   border-radius: 4px;
   box-sizing: border-box;
 }
-form button {
+button {
   background: var(--primary);
   border: 0;
   color: #fff;
