add statistic view for admin

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -92,6 +92,10 @@ tr:hover {background-color: #ddd;}
 
 /* FORM */
 
+select{
+  margin-bottom: 20px;
+}
+
 .create{
   position: absolute;
   text-align: left;
