--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,12 +7,13 @@
   --error: #e7195a;
 }
 body {
-  background: #f1f1f1;
   margin: 0;
   font-family: "Roboto";
+  background: #2b2b2b;
+  color: white;
 }
 header {
-  background: #fff;
+  background: black;
 }
 header .container {
   max-width: 1400px;
@@ -23,7 +24,7 @@ header .container {
   justify-content: space-between;
 }
 header a {
-  color: #333;
+  color: white;
   text-decoration: none;
 }
 .pages{
@@ -83,7 +84,7 @@ td, th {
   padding: 8px;
 }
 
-tr:hover {background-color: #ddd;}
+tr:hover {background-color: #ddd;color: black}
 
 .left{
   text-align: right;
@@ -140,8 +141,8 @@ nav a {
   margin-left: 10px;
 }
 nav button {
-  background: #fff;
-  color: var(--primary);
+  background: #2b2b2b;
+  color: white;
   border: 2px solid var(--primary);
   padding: 6px 10px;
   border-radius: 4px;
@@ -150,13 +151,19 @@ nav button {
   font-size: 1em;
   margin-left: 10px;
 }
+nav button:hover{
+  background-color: white;
+  color: black;
+}
 /* auth forms */
 form.signup, form.login {
   max-width: 400px;
   margin: 40px auto;
   padding: 20px;
   background: #fff;
+  color: black;
   border-radius: 4px;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
 }
 
 .chart{
@@ -194,4 +201,45 @@ form.signup, form.login {
   height: 10px;
   background-color: #0ceefa;
   display: inline-block;
+}
+
+/* Admin page */
+.users{
+  display: flex;
+}
+
+.admin-selection{
+  margin-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+:root {
+  --arrow-bg: rgba(255, 255, 255, 0.3);
+  --arrow-icon: url(https://upload.wikimedia.org/wikipedia/commons/9/9d/Caret_down_font_awesome_whitevariation.svg);
+  --option-bg: white;
+  --select-bg: rgba(255, 255, 255, 0.2);
+}
+
+/* <select> styles */
+select {
+  /* Reset */
+  appearance: none;
+  border: 0;
+  outline: 0;
+  font: inherit;
+  /* Personalize */
+  width: 20rem;
+  padding: 1rem 4rem 1rem 1rem;
+  background: var(--arrow-icon) no-repeat right 0.8em center / 1.4em,
+    linear-gradient(to left, var(--arrow-bg) 3em, var(--select-bg) 3em);
+  color: white;
+  border-radius: 0.25em;
+  box-shadow: 0 0 1em 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+option{
+  color: black;
 }
